--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -63,6 +63,7 @@ body {
     font-weight: 800;
     position: relative;
     bottom: 0.25rem;
+    left: -0.1rem;
     padding-right: 2ch;
     color: var(--font-color-comment);
 }
@@ -73,7 +74,7 @@ body {
     position: relative;
     bottom: 0.12rem;
     text-align: right;
-    padding-right: 1ch;
+    padding-right: 3ch;
     padding-left: 3ch;
 }
 
@@ -102,4 +103,13 @@ body {
     padding-left: 1rem;
     padding-right: 1rem;
     color: var(--font-color-raw);
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
